# ecommerce-clean-architecture

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
src/: model.py
src/adapters/: orm.py  repository.py
src/domain/: model.py
src/entrypoints/: flask_app.py
src/services/: services.py
tests/: conftest.py  test_allocate.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py
tests/unit/: test_allocate.py  test_batches.py  test_services.py
