[tool.poetry]
name = "ecommerce-clean-architecture"
version = "0.1.0"
description = "Example application code for the 'Architecture Patterns with Python' book"
authors = ["Daniel Sousa <sousa.dfs@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/danielfsousa/ecommerce-clean-architecture"
repository = "https://github.com/danielfsousa/ecommerce-clean-architecture"
keywords = ["clean code", "ddd", "python", "ecommerce"]

[tool.taskipy.tasks]
dev = "FLASK_ENV=development FLASK_RUN_PORT=8000 FLASK_APP=src/main.py flask run"
test = "python -m pytest --tb=short tests"
"test:watch" = "PYTHONPATH=. ptw --nobeep tests/unit"
format = "black . && isort ."
lint = "flake8 && black . --check && mypy ."
validate = "pre-commit"
setup = "task install_precommit"
install_precommit = "pre-commit install"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.3.20"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-isort = "^4.0.0"
pre-commit = "^2.10.0"
taskipy = "^1.6.0"
mypy = "^0.800"
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
pytest-cov = "^2.11.1"
pytest-watch = "^4.2.0"
requests = "^2.25.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["."]

[tool.coverage.report]
show_missing = true

[tool.black]
exclude = '(\.eggs|\.git|\.mypy_cache)'

[tool.isort]
profile="black"
src_paths="."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
